# agent-memory-inspector

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
src/memory_inspector/: __init__.py  compare.py  config.py  evaluate.py  inspector.py  stores.py  types.py
src/memory_inspector/adapters/: __init__.py  base.py  langchain.py  llamaindex.py
src/retric/: __init__.py  compare.py  evaluate.py  inspector.py  stores.py  types.py
src/retric/adapters/: __init__.py  base.py  langchain.py  llamaindex.py
tests/: conftest.py  test_adapter_langchain.py  test_adapter_llamaindex.py  test_adapters.py  test_compare.py  test_evaluate.py  test_inspector.py  test_retrieval_result.py  test_stores.py  test_types.py
