[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retric"
version = "0.1.0"
description = "Inspect, compare, and evaluate vector retrieval — MRR, Recall@k, and rank diff in one library"
readme = "README.md"
license = "MIT"
authors = [{name = "Habiba Faisal"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]

[tool.hatch.build.targets.wheel]
packages = ["src/retric"]
exclude = ["**/.claude"]

[tool.hatch.build.targets.sdist]
exclude = ["**/.claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.mypy]
strict = true
